version 1.0.9
- Add non-linear least squares ("nls" command, Levenberg-
  Marquandt algorithm from minpack, with either analytical or
  numerical derivatives)
- Fix focus bug when editing the description for a variable in
  the gretl main window
- Add a new means of grabbing fitted values from a regression:
  "genr newname = yhat" (parallels "uhat")
- Updates to manual

05/02/03 version 1.0.8
- Require lapack
- Fixes to build for Mac OS X
- Avoid duplication of "against time" in model graph menus, when 
  time is included as a regressor
- Fix bugs in Find dialog
- Correct function that detects whether or not series should be
  scaled for time series graphing (case of negative values)
- Fix bug in boxplots with boolean conditions attached
- Ensure all plot windows are not resizable
- Add "leverage" command (uses lapack) to detect leverage points
  and influential observations for a given model
- Fix "diff" and "ldiff" commands for panel data sets (i.e.
  show missing values as missing)
- Fix bug in editing of varnames and labels (could get onto
  the wrong line in some cases)
- Fix gretl's startup routine for Gnu R so that it never over-
  writes the file .Rprofile
- Enhancements to Excel importer plugin (better warnings)
- Permit opening Excel or Gnumeric data from initial command-
  line invocation of gretl
- Autocorrelation test: add calculation and display of serial
  correlation-robust standard errors, if significant at the 5
  per cent level
- Fix brokenness in saving boxplots to session file
- Refinements to CSV import function -- handle space-separated
  data with multiple/variable spaces between columns
- Fix bug in range-mean graph when there are missing values at
  the start of the data range
- Fix bug in pacf calculation and plot for long lag lengths
- Add experimental "model table" in session icon view (not submitted
  for translation yet)

04/09/03 version 1.0.7
- Correct the attribution of autocorrelation test (Breusch-Godfrey